fix banner alignment

--- a/style.css
+++ b/style.css
@@ -115,7 +115,8 @@ ol.lower_alphabet {
 }
 
 div.banner{
-  max-height: 30em;
+  max-height: 45%;
+  align-items: center;
 }
 .banner{
   width: 100%;
